Update file and upload image for journal
change the main.css, journal, about, and article

--- a/journal_detail.html
+++ b/journal_detail.html
@@ -14,7 +14,6 @@
   <body>
 
     <header>
-
       <div id="global_nav">
 
         <!-- Desktop Navigation -->
@@ -67,16 +66,13 @@
     <!-- journal article -->
     <div id="article">
       <div class="">
-        <div class="article-image">
           <div id="square">
 
           </div>
-        </div>
       </div>
       <div class="article-image-items">
         <h1>Olderbrother Featured in Bon Appétit</h1>
         <h5>These Designers Just Want You to Get Amped About Their Chaga-Dyed Clothes</h5>
-        <br><br><br><br>
         <div class="article-image">
           <img src="img/01.jpg" alt="">
           <img src="img/imagery01.jpg" alt="">
@@ -87,6 +83,10 @@
       </div>
 
         <div class="ariticle-title">
+          <p>By Amiel Stanek <br>
+            Photos by Alex Lau <br>
+            Apr 02, 2019
+          </p>
           <hr>
           <p>
           Bobby Bonaparte and Max Kingery, the duo behind the fashion line Olderbrother, could give a TED Talk on the nightmarish impact the garment industry has on the environment. But they would rather not. Instead, they quietly construct their whimsical unisex clothes from sustainably harvested fabrics like organic Japanese cotton and use vivid dyes made from almost exclusively edible pigments. In conceiving each season’s limited-run colorways, they draw inspiration from ingredients that are animating the wellness world at that particular moment—fiery-orange turmeric, golden saffron, the muted earth tones of healing mushrooms—and spend months of R&D figuring out how to best translate those hues to evocative, relatable garments that integrate seamlessly into people’s lives.<br><br>
@@ -105,18 +105,12 @@
 
 
           “Health starts with what you put in your body, but you have to think about what you wear, too. We don’t have respirators in our facility. Our warehouse looks way more like a kitchen than an industrial dye house. It smells like cooking!”<br><br>
-
-          Apr 02, 2019<br>
         </p>
       </div>
 
       <div class="article-image-items">
-        <div class="article-image">
+        <div class="article-image" id="author">
           <img src="img/founder.jpg" alt="">
-          <p>By Amiel Stanek <br>
-            Photos by Alex Lau
-          </p>
-
         </div>
       </div>
     </div>
