--- a/about.html
+++ b/about.html
@@ -67,26 +67,35 @@
     </header>
 
    <div class="content_container">
+     <!-- about-title -->
+
+
+     <!-- about-body -->
       <section id="about">
+        <!-- company-introduct -->
         <div class="about-header">
-          <h3>Who We Are</h3>
+          <h2>Who We Are</h2>
           <div class="seperator-line"></div>
         </div>
         <div id="about-detail">
           <div id="about-img-item">
-            <img src="img/04.jpg" alt="who we are">
+            <video muted autoplay loop controls width="100%" >
+              <source src="img/olderbrother.mp4" type="video/mp4">
+            </video>
           </div>
           <p>
             We are at the forefront of the slow fashion revolution. Analogous to the recently shifted food paradigm, we insist on the most premium and transparent methods of garment creation. We employ a hybrid of artisan-care, environment-sensitivity and local machine-power. By incorporating eco-friendly textiles, natural dyeing and American manufacturing, each Olderbrother garment is subtly unique. At the end of the garments’ lifetime, it can be buried in your backyard.
           </p>
         </div>
         <div class="about-header">
-          <h3>Founders</h3>
+          <h2>Founders</h2>
           <div class="seperator-line"></div>
           <p>
-            Bonaparte and Kingery met each other in 2013. Then, they came together as business partners just as serendipitously.
+            Bonaparte and Kingery founded Olderbrother in September 2014 on a set of what they call no-brainer principles — among them, that the wares would be entirely eco-friendly.
           </p>
         </div>
+
+        <!-- about-founder -->
         <div id="about-detail">
           <table>
             <tr>
@@ -108,8 +117,10 @@
             They quietly construct their whimsical unisex clothes from sustainably harvested fabrics like organic Japanese cotton and use vivid dyes made from almost exclusively edible pigments. In conceiving each season’s limited-run colorways, they draw inspiration from ingredients that are animating the wellness world at that particular moment—fiery-orange turmeric, golden saffron, the muted earth tones of healing mushrooms—and spend months of R&D figuring out how to best translate those hues to evocative, relatable garments that integrate seamlessly into people’s lives.
           </p>
         </div>
+
+        <!-- content-info. -->
           <div class="about-header">
-            <h3>Get In Touch</h3>
+            <h2>Get In Touch</h2>
             <div class="seperator-line"></div>
             <h4>PO Box 28187 <br>
               Portland, OR 97228 <br>
