--- a/journal.html
+++ b/journal.html
@@ -83,7 +83,7 @@
             <div class="box">
               <div class="box-image">
                 <div class="image-link-container">
-                  <a href="journal_detail.html"><img src="img/look-vest-black-indigo.png" class="img-link" alt="White spoon holding dried saffron and golden-coloured fabric in the background."></a>
+                  <a href="journal_detail.html"><img src="img/Journal-img-01.jpg" class="img-link" alt="White spoon holding dried saffron and golden-coloured fabric in the background."></a>
                   <div class="img-hover-box">
                     <div class="img-hover-text">
                       <a href="journal_detail.html">Presenting Spring/Summer 2019</a>
@@ -100,7 +100,7 @@
               <div class="box">
                 <div class="box-image">
                   <div class="image-link-container">
-                    <a href="journal_detail.html"><img src="img/imagery03.jpg" class="img-link" alt="Connecting the Dots"></a>
+                    <a href="journal_detail.html"><img src="img/Journal-img-02.jpg" class="img-link" alt="Connecting the Dots"></a>
                     <div class="img-hover-box">
                       <div class="img-hover-text">
                         <a href="journal_detail.html">Connecting the Dots</a>
@@ -116,7 +116,7 @@
               <div class="box">
                 <div class="box-image">
                   <div class="image-link-container">
-                    <a href="journal_detail.html"><img src="img/imagery06.jpg" class="img-link" alt="The Gallos - Morning Routine"></a>
+                    <a href="journal_detail.html"><img src="img/Journal-img-03.jpg" class="img-link" alt="The Gallos - Morning Routine"></a>
                     <div class="img-hover-box">
                       <div class="img-hover-text"><a href="journal_detail.html">
                       The Gallos - Morning Routine</a></div>
@@ -134,7 +134,7 @@
               <div class="box">
                 <div class="box-image">
                   <div class="image-link-container">
-                    <a href="journal_detail.html"><img src="img/imagery05.jpg" class="img-link" alt="Connecting the Dots"></a>
+                    <a href="journal_detail.html"><img src="img/Journal-img-04.jpg" class="img-link" alt="Connecting the Dots"></a>
                     <div class="img-hover-box">
                       <div class="img-hover-text">
                         <a href="journal_detail.html">Connecting the Dots</a>
@@ -150,7 +150,7 @@
               <div class="box">
                 <div class="box-image">
                   <div class="image-link-container">
-                    <a href="journal_detail.html"><img src="img/imagery04.jpg" class="img-link" alt="White spoon holding dried saffron and golden-coloured fabric in the background."></a>
+                    <a href="journal_detail.html"><img src="img/Journal-img-05.jpg" class="img-link" alt="White spoon holding dried saffron and golden-coloured fabric in the background."></a>
                     <div class="img-hover-box">
                       <div class="img-hover-text">
                         <a href="journal_detail.html">Olderbrother Featured in Bon Appétit</a>
@@ -166,7 +166,11 @@
               <div class="box">
                 <div class="box-image">
                   <div class="image-link-container">
-                    <a href="journal_detail.html"><img src="img/06.jpg" class="img-link" alt="Connecting the Dots"></a>
+                    <a href="journal_detail.html">
+                      <video muted autoplay loop controls width="100%" class="img-link" alt="Connecting the Dots">
+                        <source src="img/olderbrother.mp4" type="video/mp4">
+                      </video>
+                    </a>
                     <div class="img-hover-box">
                       <div class="img-hover-text">
                         <a href="journal_detail.html">Connecting the Dots</a>
