Try to make mobile dropdown filters in shop.html

--- a/shop.html
+++ b/shop.html
@@ -72,8 +72,8 @@
     <div class="toggle-drop-mobile-filters">
       <nav id="dropdown_product_filters">
 
-        <div class="dropdown-filter-title dropdown-nav-target">
-          <h5 class="filter-group-title">Collections</h5>
+        <div class="dropdown-nav-target">
+          <h5 class="dropdown-toggle filter-group-title" data-toggle="dropdown" id="menu-trigger">Collections</h5>
           <i class="material-icons" aria-hidden="true">arrow_drop_down</i>
         </div>
         <div class="dropdown-filter-nav-content">
@@ -84,7 +84,7 @@
           <a href="#" class="filter-tag">Outerwear</a>
         </div>
 
-        <div class="dropdown-filter-title dropdown-nav-target">
+        <div class="dropdown-nav-target">
           <h5 class="filter-group-title">Colors</h5>
           <i class="material-icons" aria-hidden="true">arrow_drop_down</i>
         </div>
@@ -99,7 +99,7 @@
           <a href="#" class="filter-tag">White</a>
         </div>
 
-        <div class="dropdown-filter-title dropdown-nav-target">
+        <div class="dropdown-nav-target">
           <h5 class="filter-group-title">Sizes</h5>
           <i class="material-icons" aria-hidden="true">arrow_drop_down</i>
         </div>
