Create lookbooks.html and update navigation links

--- a/journal_detail.html
+++ b/journal_detail.html
@@ -23,7 +23,7 @@
               <img src="img/olderbrother-wordmark.png" alt="Olderbrother Logo">
             </a>
             <a href="shop.html" class="main_nav_item">Shop</a>
-            <a href="#" class="main_nav_item">Lookbooks</a>
+            <a href="lookbooks.html" class="main_nav_item">Lookbooks</a>
             <a href="about.html" class="main_nav_item">About</a>
             <a href="journal.html" class="main_nav_item">Journal</a>
             <div class="icon_nav">
@@ -51,7 +51,7 @@
             </div>
             <div id="dropdown-links">
               <a href="shop.html">Shop</a>
-              <a href="#">Lookbooks</a>
+              <a href="lookbooks.html">Lookbooks</a>
               <a href="about.html">About</a>
               <a href="journal.html">Journal</a>
             </div>
