--- a/checkout_form.html
+++ b/checkout_form.html
@@ -26,7 +26,7 @@
               <img src="img/olderbrother-wordmark.png" alt="Olderbrother Logo">
             </a>
             <a href="shop.html" class="main_nav_item">Shop</a>
-            <a href="#" class="main_nav_item">Lookbooks</a>
+            <a href="lookbooks.html" class="main_nav_item">Lookbooks</a>
             <a href="about.html" class="main_nav_item">About</a>
             <a href="journal.html" class="main_nav_item">Journal</a>
             <div class="icon_nav">
@@ -49,7 +49,7 @@
               </div>
               <div class="icon_nav">
                 <a href="checkout_cart.html"><i class="material-icons">shopping_cart</i></a>
-                <a href="#"><i class="material-icons">search</i></a>
+                <a href="lookbooks.html"><i class="material-icons">search</i></a>
               </div>
             </div>
             <div id="dropdown-links">
