--- a/lookbooks.html
+++ b/lookbooks.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title class="page_title">Olderbrother | Product Name</title>
+    <title class="page_title">Olderbrother | Shop</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
     <link rel="stylesheet" type="text/css" href="css/grids.css">
@@ -66,181 +66,104 @@
 
     </header>
 
-    <!-- ONE PRODUCT DETAILED VIEW -->
-    <!-- PURCHASING PROCESS (use tabindex)-->
-    <!-- USER FEEDBACK (REVIEWS) ON PRODUCT -->
+    <!-- LOOKBOOKS-->
 
-    <div class="content_container">
+    <section id="lookbook_overview">
 
-      <section id="individual_product">
-
-          <div class="block">
-            <div class="product_image">
-              <img src="img/classic-shirt-white1.png" alt="Raglan Crew - Tie Dye Sky Indigo" width="400px">
-            </div>
-          </div>
-
-          <div class="block">
-            <div class="product_details">
-              <h1 class="product_name">Classic Shirt</h1>
-              <h4 class="product_clr">White</h4>
-              <p class="price">$225.00</p>
-
-              <div class="product_options">
-                <div class="size_selector">
-                  <label class="text-label">Size</label><br>
-                  <select name="size" class="product_select"><br>
-                    <option value="extra-small">XXS</option>
-                    <option value="extra-small">XS</option>
-                    <option value="extra-small">S</option>
-                    <option value="medium">M</option>
-                    <option value="large">L</option>
-                    <option value="extra-large">XL</option>
-                  </select>
-                </div>
-
-                <div class="quantity_selector">
-                  <label class="text-label">Quantity</label><br>
-                  <select name="quantity" class="product_select"><br>
-                    <option value="one">1</option>
-                    <option value="two">2</option>
-                    <option value="three">3</option>
-                    <option value="four">4</option>
-                    <option value="five">5</option>
-                  </select>
-                </div>
-              </div>
-
-              <p class="product_desc">Classic fit button down with half moon details throughout. Fit is true to men's sizing. 100% Japanese organic oxford.</p>
-
-              <a href="checkout_cart.html" class="atc-btn">Add to Cart</a>
-            </div>
-          </div>
-
-      </section>
-
-      <section id="featured_products">
-
-        <h3 class="featured-title">You May Also Like</h3>
+      <div class="content_container">
 
         <div class="block">
-          <div class="image-link">
-            <a href="product_detail1.html">
-              <img src="img/look-leisure-shirt-saffron.png" alt="Lookbook - Leisure Shirt">
-              <img class="hover-img" src="img/leisure-shirt-saffron.png" alt="Leisure Shirt - Saffron">
-            </a>
+          <div class="lookbook_image">
+            <a href="#"><img src="img/lookbooks/aw19.png" alt="Lookbook - Autumn/Winter 2019"></a>
           </div>
-          <section class="product_quick_info">
-            <h3 class="product_name"><a href="#">Leisure Shirt</a></h3>
-            <h4>Saffron</h4>
-            <p class="price">$265.00</p>
+          <section class="lookbook_info">
+            <h4 class="lookbook_name"><a href="#">Ashwagandha & Elderberries<br> AW19</a></h4>
           </section>
         </div>
 
         <div class="block">
-          <div class="image-link">
-            <a href="product_detail1.html">
-              <img src="img/look-vest-black-indigo.png" alt="Lookbook - Vest">
-              <img class="hover-img" src="img/vest-black-indigo.png" alt="Vest - Black Indigo">
-            </a>
+          <div class="lookbook_image">
+            <a href="#"><img src="img/lookbooks/ss19.jpg" alt="Lookbook - Spring/Summer 2019"></a>
           </div>
-          <section class="product_quick_info">
-            <h3 class="product_name"><a href="#">Vest</a></h3>
-            <h4>Black Indigo</h4>
-            <p class="price">$230.00</p>
+          <section class="lookbook_info">
+            <h4 class="lookbook_name"><a href="#">Saffron Sabbatical<br> SS19</a></h4>
           </section>
         </div>
 
         <div class="block">
-          <div class="image-link">
-            <a href="product_detail1.html">
-              <img src="img/look-geri-pants-sky-indigo.png" alt="Lookbook - Geri Pants">
-              <img class="hover-img" src="img/geri-pants-sky-indigo.png" alt="Geri Pants - Sky Indigo">
-            </a>
+          <div class="lookbook_image">
+            <a href="#"><img src="img/lookbooks/aw18.jpg" alt="Lookbook - Autumn/Winter 2018"></a>
           </div>
-          <section class="product_quick_info">
-            <h3 class="product_name"><a href="#">Geri Pants</a></h3>
-            <h4>Sky Indigo</h4>
-            <p class="price">$265.00</p>
+          <section class="lookbook_info">
+            <h4 class="lookbook_name"><a href="#">Staycation<br> AW18</a></h4>
           </section>
         </div>
 
         <div class="block">
-          <div class="image-link">
-            <a href="product_detail1.html">
-              <img src="img/look-rugby-shirt-natural-sky-indigo.png" alt="Lookbook - Rugby Shirt">
-              <img class="hover-img" src="img/rugby-shirt-natural-sky-indigo.png" alt="Rugby Shirt - Sky Indigo">
-            </a>
+          <div class="lookbook_image">
+            <a href="#"><img src="img/lookbooks/ss18.jpg" alt="Lookbook - Spring/Summer 2018"></a>
           </div>
-          <section class="product_quick_info">
-            <h3 class="product_name"><a href="#">Rugby Shirt</a></h3>
-            <h4>Natural/Sky Indigo</h4>
-            <p class="price">$195.00</p>
+          <section class="lookbook_info">
+            <h4 class="lookbook_name"><a href="#">Spring Dance<br> SS18</a></h4>
           </section>
         </div>
 
-      </section>
-
-    </div>
-
-    <section id="ratings_reviews">
-      <div id="write_review">
         <div class="block">
-          <h3 class="reviews-heading">Write a Review</h3>
-          <br>
-          <div class="account_email">
-            <label for="email" class="text-label">Email Address</label>
-            <input type="text" id="email" class="input-box">
-          </div><br>
-
-          <div class="account_pass">
-            <label for="password" class="text-label">Password</label>
-            <input type="text" id="password" class="input-box">
+          <div class="lookbook_image">
+            <a href="#"><img src="img/lookbooks/aw17.jpg" alt="Lookbook - Autumn/Winter 2017"></a>
           </div>
-
-          <h5 class="intext-link"><a href="#">Forgot your password?</a></h5>
-
-          <div class="sign_up_btns">
-            <a href="#" class="secondary-btn">Sign Up</a>
-            <a href="#" class="primary-btn">Sign In</a>
-          </div>
-
+          <section class="lookbook_info">
+            <h4 class="lookbook_name"><a href="#">Back to School<br> AW17</a></h4>
+          </section>
         </div>
+
+        <div class="block">
+          <div class="lookbook_image">
+            <a href="#"><img src="img/lookbooks/ss17.jpg" alt="Lookbook - Spring/Summer 2017"></a>
+          </div>
+          <section class="lookbook_info">
+            <h4 class="lookbook_name"><a href="#">Summer Camp<br> SS17</a></h4>
+          </section>
+        </div>
+
+        <div class="block">
+          <div class="lookbook_image">
+            <a href="#"><img src="img/lookbooks/aw16.jpg" alt="Lookbook - Autumn/Winter 2016"></a>
+          </div>
+          <section class="lookbook_info">
+            <h4 class="lookbook_name"><a href="#">Hand Me Downs<br> AW16</a></h4>
+          </section>
+        </div>
+
+        <div class="block">
+          <div class="lookbook_image">
+            <a href="#"><img src="img/lookbooks/ss16.jpg" alt="Lookbook - Spring/Summer 2016"></a>
+          </div>
+          <section class="lookbook_info">
+            <h4 class="lookbook_name"><a href="#">Plant Aridity Awareness Society<br> SS16</a></h4>
+          </section>
+        </div>
+
+        <div class="block">
+          <div class="lookbook_image">
+            <a href="#"><img src="img/lookbooks/aw15.jpg" alt="Lookbook - Autumn/Winter 2015"></a>
+          </div>
+          <section class="lookbook_info">
+            <h4 class="lookbook_name"><a href="#">Enthusiasm & Naps<br> AW16</a></h4>
+          </section>
+        </div>
+
+        <div class="block">
+          <div class="lookbook_image">
+            <a href="#"><img src="img/lookbooks/ss15.jpg" alt="Lookbook - Spring/Summer 2015"></a>
+          </div>
+          <section class="lookbook_info">
+            <h4 class="lookbook_name"><a href="#">Spring Jinx<br> SS15</a></h4>
+          </section>
+        </div>
+
       </div>
 
-      <div id="other_reviews">
-        <div class="block">
-          <h3 class="reviews_heading">Other Reviews</h3>
-
-          <div class="written-review">
-            <h4 class="review-date">04/10/2019</h4>
-            <div class="stars">
-              <span>★</span>
-              <span>★</span>
-              <span>★</span>
-              <span>★</span>
-              <span>★</span>
-            </div>
-            <h3 class="review-title">A "dress up" and "dress down" piece</h3>
-            <p class="review-text">This shirt makes it easy to go out from the office to bars with friends.</p>
-            <h4 class="review-name">By Brandon R</h4>
-          </div>
-
-          <div class="written-review seperator-line">
-            <h4 class="review-date">17/06/2019</h4>
-            <div class="stars">
-              <span>★</span>
-              <span>★</span>
-              <span>★</span>
-              <span>★</span>
-            </div>
-            <h3 class="review-title">Hopefully I don't end up spilling coffee on myself</h3>
-            <p class="review-text">But wouldn't mind naturally dyeing this shirt afterwards.</p>
-            <h4 class="review-name">By Riley Z</h4>
-          </div>
-
-        </div>
-      </div>
     </section>
 
     <footer class="page_footer">
