Fix image and journal.html

--- a/journal.html
+++ b/journal.html
@@ -68,9 +68,12 @@
 
     <!-- JOURNAL -->
     <!-- COMPANY UPDATES / EVENTS -->
+    <div id="journal_overview">
+
           <div id="journal-items">
             <!-- <img src=""img/01.jpg"" alt=""> -->
             <div class="items-text">
+              <img src="img/journal.png" alt="this is a journal image">
               <a href="#"><h1>JOURNAL</h1></a>
             </div>
           </div>
@@ -97,7 +100,7 @@
               <div class="box">
                 <div class="box-image">
                   <div class="image-link-container">
-                    <a href="journal_detail.html"><img src="img/Journal-img-02.jpg" class="img-link" alt="Connecting the Dots"></a>
+                    <a href="journal_detail.html"><img src="img/Journal-img-02.png" class="img-link" alt="Connecting the Dots"></a>
                     <div class="img-hover-box">
                       <div class="img-hover-text">
                         <a href="journal_detail.html">Connecting the Dots</a>
@@ -182,6 +185,7 @@
               </div>
             </div>
       </section>
+</div>
 
   <footer class="page_footer">
 
@@ -242,6 +246,7 @@
 
       </div>
     </div>
+
 
     <div class="footer_copyright">
       <div class="content_container">
