Update navigation in html files with current page link

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
             </a>
             <a href="shop.html" class="main_nav_item">Shop</a>
             <a href="lookbooks.html" class="main_nav_item">Lookbooks</a>
-            <a href="about.html" class="main_nav_item">About</a>
+            <a href="about.html" class="main_nav_item current_link">About</a>
             <a href="journal.html" class="main_nav_item">Journal</a>
             <div class="icon_nav">
               <a href="checkout_cart.html" class="main_nav_item"><i class="material-icons">shopping_cart</i></a>
