--- a/checkout_form.html
+++ b/checkout_form.html
@@ -25,7 +25,7 @@
             <a href="home.html" id="logo-wordmark" class="main_nav_item">
               <img src="img/olderbrother-wordmark.png" alt="Olderbrother Logo">
             </a>
-            <a href="shop.html" class="main_nav_item">Shop</a>
+            <a href="shop.html" class="main_nav_item current_link">Shop</a>
             <a href="lookbooks.html" class="main_nav_item">Lookbooks</a>
             <a href="about.html" class="main_nav_item">About</a>
             <a href="journal.html" class="main_nav_item">Journal</a>
