--- a/journal_detail.html
+++ b/journal_detail.html
@@ -25,7 +25,7 @@
             <a href="shop.html" class="main_nav_item">Shop</a>
             <a href="lookbooks.html" class="main_nav_item">Lookbooks</a>
             <a href="about.html" class="main_nav_item">About</a>
-            <a href="journal.html" class="main_nav_item">Journal</a>
+            <a href="journal.html" class="main_nav_item current_link">Journal</a>
             <div class="icon_nav">
               <a href="checkout_cart.html" class="main_nav_item"><i class="material-icons">shopping_cart</i></a>
               <a href="#" class="main_nav_item"><i class="material-icons">search</i></a>
