--- a/lookbooks.html
+++ b/lookbooks.html
@@ -26,7 +26,7 @@
               <img src="img/olderbrother-wordmark.png" alt="Olderbrother Logo">
             </a>
             <a href="shop.html" class="main_nav_item">Shop</a>
-            <a href="lookbooks.html" class="main_nav_item">Lookbooks</a>
+            <a href="lookbooks.html" class="main_nav_item current_link">Lookbooks</a>
             <a href="about.html" class="main_nav_item">About</a>
             <a href="journal.html" class="main_nav_item">Journal</a>
             <div class="icon_nav">
