Fixed dropdown product filters with <details> and <summary>

--- a/shop.html
+++ b/shop.html
@@ -69,13 +69,13 @@
     <!-- MULTI-PRODUCT LISTING-->
 
     <!-- mobile dropdown filters -->
-    <div class="toggle-drop-mobile-filters">
-      <nav id="dropdown_product_filters">
+    <nav id="dropdown_product_filters">
 
-        <div class="dropdown-nav-target">
-          <h5 class="dropdown-toggle filter-group-title" data-toggle="dropdown" id="menu-trigger">Collections</h5>
+      <details class="toggle-product-filter">
+        <summary class="dropdown-nav-target">
+          <h5 class="filter-group-title">Collections</h5>
           <i class="material-icons" aria-hidden="true">arrow_drop_down</i>
-        </div>
+        </summary>
         <div class="dropdown-filter-nav-content">
           <a href="#" class="filter-tag">All</a>
           <a href="#" class="filter-tag">Knits</a>
@@ -83,11 +83,13 @@
           <a href="#" class="filter-tag">Bottoms</a>
           <a href="#" class="filter-tag">Outerwear</a>
         </div>
+      </details>
 
-        <div class="dropdown-nav-target">
-          <h5 class="filter-group-title">Colors</h5>
+      <details class="toggle-product-filter">
+        <summary class="dropdown-nav-target">
+          <h5 class="filter-group-title">Collections</h5>
           <i class="material-icons" aria-hidden="true">arrow_drop_down</i>
-        </div>
+        </summary>
         <div class="dropdown-filter-nav-content">
           <a href="#" class="filter-tag">All</a>
           <a href="#" class="filter-tag">Saffron</a>
@@ -98,11 +100,13 @@
           <a href="#" class="filter-tag">Tie Dye</a>
           <a href="#" class="filter-tag">White</a>
         </div>
+      </details>
 
-        <div class="dropdown-nav-target">
+      <details class="toggle-product-filter">
+        <summary class="dropdown-nav-target">
           <h5 class="filter-group-title">Sizes</h5>
           <i class="material-icons" aria-hidden="true">arrow_drop_down</i>
-        </div>
+        </summary>
         <div class="dropdown-filter-nav-content">
           <a href="#" class="filter-tag">All</a>
           <a href="#" class="filter-tag">XXS</a>
@@ -112,9 +116,9 @@
           <a href="#" class="filter-tag">L</a>
           <a href="#" class="filter-tag">XL</a>
         </div>
+      </details>
 
-      </nav>
-    </div>
+    </nav>
 
     <div class="content_container" id="shop">
 
