Fix border radius of input text boxes

--- a/checkout_form.html
+++ b/checkout_form.html
@@ -97,9 +97,7 @@
 
           </div>
         </div>
-<!--
 
--->
         <div id="payment_form">
           <div class="block">
 
@@ -229,7 +227,7 @@
 
             <div class="save_card">
               <input type="radio" value="radio_btn">
-              <label for="radio_btn_name">Save card on file?</label>
+              <label for="radio_btn_name">Save card on file</label>
             </div><br>
 
             <div class="pay_form_btns">
