Added page titles for about, checkout, lookbooks, shop, and journal (mobile only)

--- a/about.html
+++ b/about.html
@@ -66,9 +66,10 @@
 
     </header>
 
-   <div class="content_container">
-     <!-- about-title -->
+    <h2 class="main-page-title">About Olderbrother</h2>
 
+    <div class="content_container">
+     <!-- about-title -->
 
      <!-- about-body -->
       <section id="about">
