--- a/checkout_cart.html
+++ b/checkout_cart.html
@@ -66,6 +66,8 @@
 
     </header>
 
+    <h2 class="main-page-title">Your Shopping Cart</h2>
+
     <!-- CHECKOUT PROCESS - CART -->
     <div class="content_container">
 
