--- a/checkout_form.html
+++ b/checkout_form.html
@@ -66,6 +66,8 @@
 
     </header>
 
+    <h2 class="main-page-title">Shipping + Payment</h2>
+
     <!-- CHECKOUT PROCESS - PAYMENT -->
     <div class="content_container">
 
