--- a/journal.html
+++ b/journal.html
@@ -74,7 +74,7 @@
             <!-- <img src=""img/01.jpg"" alt=""> -->
             <div class="items-text">
               <img src="img/journal.png" alt="this is a journal image">
-              <a href="#"><h1>JOURNAL</h1></a>
+              <a href="#"><h1>Journal</h1></a>
             </div>
           </div>
 
