--- a/lookbooks.html
+++ b/lookbooks.html
@@ -70,6 +70,8 @@
 
     <section id="lookbook_overview">
 
+    <h2 class="main-page-title">Lookbooks</h2>
+    
       <div class="content_container">
 
         <div class="block">
