--- a/shop.html
+++ b/shop.html
@@ -67,6 +67,7 @@
     </header>
 
     <!-- MULTI-PRODUCT LISTING-->
+    <h2 class="main-page-title">New Arrivals</h2>
 
     <!-- mobile dropdown filters -->
     <nav id="dropdown_product_filters">
