Add citations page

--- a/journal.html
+++ b/journal.html
@@ -51,6 +51,7 @@
                 <a href="checkout_cart.html"><i class="material-icons">shopping_cart</i></a>
                 <a href="#"><i class="material-icons">search</i></a>
               </div>
+
             </div>
             <div id="dropdown-links">
               <a href="shop.html">Shop</a>
@@ -74,7 +75,7 @@
             <!-- <img src=""img/01.jpg"" alt=""> -->
             <div class="items-text">
               <img src="img/journal.png" alt="this is a journal image">
-              <a href="#"><h1>Journal</h1></a>
+              <a href="#journal"><h1>Journal</h1></a>
             </div>
           </div>
 
