--- a/style_guide.html
+++ b/style_guide.html
@@ -12,7 +12,7 @@
 
   <body>
 
-    <header class="content_container">
+    <header class="content_container" id="citations_title">
       <h1>Olderbrother Style Guide Template</h1>
       <p>This styleguide is a resource to provide a common language around Olderbrother's design patterns.</p>
 
@@ -21,6 +21,8 @@
         <a href="product-page.html" class="main_nav_item">Products</a>
         <a href="checkout-cart.html" class="main_nav_item">Checkout</a>
         <a href="payment-form.html" class="main_nav_item">Payment</a>
+        <a href="citations.html"
+        class="main_nav_item">Citations</a>
       </nav>
     </header>
 
